# cal

./: CLAUDE.md  app.py  database.py  pyproject.toml
templates/: add_event.html  base.html  calendar.html  calendar_pdf.html  edit_event.html  index.html  settings.html
