[project]
name = "event-calendar"
version = "0.1.0"
description = "A Python web app for creating printable event calendars"
authors = [{name = "Calendar App", email = "user@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "Flask>=2.3.3",
    "weasyprint>=62.0",
]

[tool.uv]
dev-dependencies = []